experimentData/JavaFuzzer/CFR-detailedExperimentData/errorSamples/recompilationFailures/191/log-1-191.log

Test.java:300: error: undefined label: block11
                                break block11;
                                ^
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

